created ts-clients admin/agent/tenant

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "workspaces": [
     "./packages/*",
     "./clients/*",
-    "./clients/admin/*"
+    "./clients/admin/*",
+    "./clients/agent/*",
+    "./clients/tenant/*"
   ],
   "dependencies": {
     "express": "^4.17.2",
