--- a/clients/admin/package.json
+++ b/clients/admin/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "start": "set PORT=3000 && react-scripts start",
-    "build": "react-scripts build",
+    "build": "webpack && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
