--- a/packages/ps-ui-toolkit/package.json
+++ b/packages/ps-ui-toolkit/package.json
@@ -66,6 +66,8 @@
     "@storybook/preset-create-react-app": "^4.0.0",
     "@storybook/react": "^6.4.18",
     "babel-loader": "^8.2.3",
+    "css-loader": "^6.6.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.1"
   }
